Add mysql state

--- a/saltstack/salt/mysql/map.jinja
+++ b/saltstack/salt/mysql/map.jinja
@@ -5,7 +5,8 @@
         },
         'RedHat': {
             'server': 'mysql-server',
-            'server_service': 'nginx',
+            'server_service': 'mysqld',
+            'python': 'MySQL-python',
             'conf_file': '/etc/mysql/my.cf'
         },
     }, default='RedHat' ),
