Correct my.cf path

--- a/saltstack/salt/mysql/map.jinja
+++ b/saltstack/salt/mysql/map.jinja
@@ -7,7 +7,7 @@
             'server': 'mysql-server',
             'server_service': 'mysqld',
             'python': 'MySQL-python',
-            'conf_file': '/etc/mysql/my.cf'
+            'conf_file': '/etc/my.cf'
         },
     }, default='RedHat' ),
 }, merge=True) %}
