--- a/saltstack/salt/php/map.jinja
+++ b/saltstack/salt/php/map.jinja
@@ -7,7 +7,10 @@
         },
         'RedHat': {
             'pkgs':{
-                'fpm': 'php-fpm'
+                'fpm': 'php-fpm',
+                'mysql': 'php-mysql',
+                'gd': 'php-gd',
+                'cli': 'php-cli'
             },
             'fpm': {
                 'conf': '/etc/php-fpm.conf',
