Add asterisk formula

--- a/saltstack/salt/asterisk/map.jinja
+++ b/saltstack/salt/asterisk/map.jinja
@@ -5,9 +5,7 @@
         },
         'RedHat': {
             'package': 'asterisk',
-            'user': 'asteriskpbx',
-            'group': 'asteriskpbx',
-            'conf_file': '/etc/my.cf'
+            'user': 'asteriskpbx'
         },
     }, default='RedHat' ),
 }, merge=True) %}
