Add postgresql service

--- a/saltstack/salt/postgresql/map.jinja
+++ b/saltstack/salt/postgresql/map.jinja
@@ -5,6 +5,7 @@
         },
         'RedHat': {
             'server': 'postgresql93-server',
+            'server_service': 'postgresql-9.3',
             'contrib': 'postgresql93-contrib',
             'devel': 'postgresql93-devel',
             'postgis': 'postgis2_93'
