--- a/saltstack/salt/postgresql/map.jinja
+++ b/saltstack/salt/postgresql/map.jinja
@@ -8,7 +8,8 @@
             'server_service': 'postgresql-9.3',
             'contrib': 'postgresql93-contrib',
             'devel': 'postgresql93-devel',
-            'postgis': 'postgis2_93'
+            'postgis': 'postgis2_93',
+            'conf_dir': '/var/lib/pgsql/9.3/data'
         },
     }, default='RedHat' )
 }, merge=True) %}
