--- a/saltstack/salt/supervisor/map.jinja
+++ b/saltstack/salt/supervisor/map.jinja
@@ -8,7 +8,7 @@
         'RedHat': {
             'package': 'supervisor',
             'service': 'supervisord',
-            'conf_file': 'etc/supervisord.conf'
+            'conf_file': '/etc/supervisord.conf'
         },
     }, default='RedHat' )
 }, merge=True) %}
