--- a/saltstack/salt/openssl/map.jinja
+++ b/saltstack/salt/openssl/map.jinja
@@ -1,10 +1,10 @@
-{% set postfix = salt['pillar.get']('postfix', {
+{% set openssl = salt['pillar.get']('openssl', {
     'lookup': salt['grains.filter_by']({
         'Debian': {
-            'package': 'postfix'
+            'package': 'openssl'
         },
         'RedHat': {
-            'package': 'postfix'
+            'package': 'todo'
         },
     }, default='RedHat' )
 }, merge=True) %}
