--- a/saltstack/salt/vim/map.jinja
+++ b/saltstack/salt/vim/map.jinja
@@ -4,7 +4,7 @@
             'package': 'vim'
         },
         'RedHat': {
-            'package': 'vim'
+            'package': 'vim-enhanced'
         },
     }, default='RedHat' )
 }, merge=True) %}
