Add htaccess file support

--- a/saltstack/salt/nginx/map.jinja
+++ b/saltstack/salt/nginx/map.jinja
@@ -17,6 +17,7 @@
             'vhost_available': '/etc/nginx/conf.d',
             'vhost_enabled': '/etc/nginx/conf.d',
             'vhost_use_symlink': False,
+            'apache_utils': 'httpd-tools'
         },
     }, default='RedHat' ),
     'server': {
