Add debian support

--- a/saltstack/salt/miniconda/map.jinja
+++ b/saltstack/salt/miniconda/map.jinja
@@ -2,7 +2,7 @@
     'lookup': salt['grains.filter_by']({
         'Debian': {
             'profile_dir': '/etc/profile.d',
-            'gcc': 'todo'
+            'gcc': 'gcc'
         },
         'RedHat': {
             'profile_dir': '/etc/profile.d',
