--- a/saltstack/salt/nginx/map.jinja
+++ b/saltstack/salt/nginx/map.jinja
@@ -1,13 +1,14 @@
 {% set nginx = salt['pillar.get']('nginx', {
     'lookup': salt['grains.filter_by']({
         'Debian': {
-            'package': 'nginx',
+            'package': 'nginx-full',
             'service': 'nginx',
             'webuser': 'www-data',
             'conf_file': '/etc/nginx/nginx.conf',
-            'vhost_available': '/etc/nginx/sites-available',
-            'vhost_enabled': '/etc/nginx/sites-enabled',
-            'vhost_use_symlink': True,
+            'vhost_available': '/etc/nginx/conf.d',
+            'vhost_enabled': '/etc/nginx/conf.d',
+            'vhost_use_symlink': False,
+            'apache_utils': 'apache2-utils'
         },
         'RedHat': {
             'package': 'nginx',
