Add debian support

--- a/saltstack/salt/postgresql/map.jinja
+++ b/saltstack/salt/postgresql/map.jinja
@@ -7,7 +7,7 @@
             'devel': 'postgresql-server-dev-9.3',
             'python': 'python-dev',
             'postgis': 'postgresql-9.3-postgis-2.1',
-            'conf_dir': '/etc/postgresql/9.3/main/',
+            'conf_dir': '/etc/postgresql/9.3/main',
             'profile_dir': '/etc/profile.d'
         },
         'RedHat': {
