Add debian support

--- a/saltstack/salt/supervisor/map.jinja
+++ b/saltstack/salt/supervisor/map.jinja
@@ -2,8 +2,8 @@
     'lookup': salt['grains.filter_by']({
         'Debian': {
             'package': 'supervisor',
-            'service': 'todo',
-            'conf_file': 'todo'
+            'service': 'supervisor',
+            'conf_file': '/etc/supervisor/supervisord.conf'
         },
         'RedHat': {
             'package': 'supervisor',
