--- a/saltstack/salt/postgresql/map.jinja
+++ b/saltstack/salt/postgresql/map.jinja
@@ -3,7 +3,7 @@
         'Debian': {
             'server': 'postgresql-9.3',
             'server_service': 'postgresql',
-            'contrib': 'postgresql-contrib',
+            'contrib': 'postgresql-contrib-9.3',
             'devel': 'postgresql-server-dev-9.3',
             'python': 'python-dev',
             'postgis': 'postgresql-9.3-postgis-2.1',
