Add roundcube formula

--- a/saltstack/salt/dovecot/map.jinja
+++ b/saltstack/salt/dovecot/map.jinja
@@ -1,10 +1,10 @@
 {% set dovecot = salt['pillar.get']('dovecot', {
     'lookup': salt['grains.filter_by']({
         'Debian': {
-            'dovecot_mysql': 'dovecot-mysql',
-            'dovecot_pop3': 'dovecot-pop3d',
-            'dovecot_imap': 'dovecot-imapd',
-            'dovecot_sieve': 'dovecot-managesieved',
+            'mysql': 'dovecot-mysql',
+            'pop3': 'dovecot-pop3d',
+            'imap': 'dovecot-imapd',
+            'sieve': 'dovecot-managesieved',
         },
         'RedHat': {
             'package': 'todo'
