--- a/saltstack/salt/postfix/map.jinja
+++ b/saltstack/salt/postfix/map.jinja
@@ -2,7 +2,7 @@
     'lookup': salt['grains.filter_by']({
         'Debian': {
             'package': 'postfix',
-            'postfix_mysql': 'postfix-mysql',
+            'mysql': 'postfix-mysql',
             'swaks': 'swaks'
         },
         'RedHat': {
