--- a/saltstack/salt/apache/map.jinja
+++ b/saltstack/salt/apache/map.jinja
@@ -8,7 +8,7 @@
             'sites_available': '/etc/apache2/sites-available',
             'sites_enabled': '/etc/apache2/sites-enabled',
             'mods_available': '/etc/apache2/mods-available',
-            'mods_enables': '/etc/apache2/mods-enabled',
+            'mods_enabled': '/etc/apache2/mods-enabled',
             'vhost_use_symlink': True,
             'apache_utils': 'apache2-utils'
         },
