Add table query script

--- a/saltstack/salt/postfix/map.jinja
+++ b/saltstack/salt/postfix/map.jinja
@@ -3,7 +3,8 @@
         'Debian': {
             'package': 'postfix',
             'mysql': 'postfix-mysql',
-            'swaks': 'swaks'
+            'swaks': 'swaks',
+            'conf_dir': '/etc/postfix'
         },
         'RedHat': {
             'package': 'postfix'
