--- a/saltstack/salt/postfix/map.jinja
+++ b/saltstack/salt/postfix/map.jinja
@@ -2,6 +2,7 @@
     'lookup': salt['grains.filter_by']({
         'Debian': {
             'package': 'postfix',
+            'service': 'postfix',
             'mysql': 'postfix-mysql',
             'swaks': 'swaks',
             'conf_dir': '/etc/postfix'
