Add dovecot-sql conf

--- a/saltstack/salt/dovecot/map.jinja
+++ b/saltstack/salt/dovecot/map.jinja
@@ -5,6 +5,7 @@
             'pop3': 'dovecot-pop3d',
             'imap': 'dovecot-imapd',
             'sieve': 'dovecot-managesieved',
+            'conf_dir': '/etc/dovecot',
             'confd_dir': '/etc/dovecot/conf.d'
         },
         'RedHat': {
