--- a/saltstack/salt/dkim/map.jinja
+++ b/saltstack/salt/dkim/map.jinja
@@ -3,6 +3,8 @@
         'Debian': {
             'package': 'opendkim',
             'service': 'opendkim',
+            'user': 'opendkim',
+            'group': 'opendkim',
             'conf_dir': '/etc/opendkim',
             'conf_file': '/etc/opendkim/opendkim.conf',
             'keys_dir': '/etc/opendkim/keys',
