--- a/saltstack/salt/dkim/map.jinja
+++ b/saltstack/salt/dkim/map.jinja
@@ -5,6 +5,7 @@
             'service': 'opendkim',
             'user': 'opendkim',
             'group': 'opendkim',
+            'tools': 'opendkim-tools',
             'conf_dir': '/etc/opendkim',
             'conf_file': '/etc/opendkim/opendkim.conf',
             'keys_dir': '/etc/opendkim/keys',
