--- a/saltstack/salt/dkim/map.jinja
+++ b/saltstack/salt/dkim/map.jinja
@@ -7,7 +7,7 @@
             'group': 'opendkim',
             'tools': 'opendkim-tools',
             'conf_dir': '/etc/opendkim',
-            'conf_file': '/etc/opendkim/opendkim.conf',
+            'conf_file': '/etc/opendkim.conf',
             'keys_dir': '/etc/opendkim/keys',
             'socket_file': '/etc/default/opendkim'
         },
