Fix nginx integration

--- a/saltstack/salt/php/map.jinja
+++ b/saltstack/salt/php/map.jinja
@@ -12,7 +12,7 @@
             'fpm': {
                 'conf': '/etc/php5/fpm/php-fpm.conf',
                 'ini': '/etc/php5/fpm/php.ini',
-                'www': '/etc/php5/fpm/pool.d/www.conf',
+                'pool_dir': '/etc/php5/fpm/pool.d',
                 'service': 'php5-fpm'
             },
         },
@@ -26,7 +26,7 @@
             'fpm': {
                 'conf': '/etc/php-fpm.conf',
                 'ini': '/etc/php.ini',
-                'www': '/etc/php-fpm.d/www.conf',
+                'pool_dir': '/etc/php-fpm.d',
                 'service': 'php-fpm'
             },
         },
