Add Gitlab formula

--- a/saltstack/salt/openssl/map.jinja
+++ b/saltstack/salt/openssl/map.jinja
@@ -4,7 +4,7 @@
             'package': 'openssl'
         },
         'RedHat': {
-            'package': 'todo'
+            'package': 'openssl'
         },
     }, default='RedHat' )
 }, merge=True) %}
