--- a/saltstack/salt/php/map.jinja
+++ b/saltstack/salt/php/map.jinja
@@ -7,7 +7,8 @@
                 'gd': 'php5-gd',
                 'cli': 'php5-cli',
                 'mcrypt': 'php5-mcrypt',
-                'intl': 'php5-intl'
+                'intl': 'php5-intl',
+                'imap': 'php5-imap'
             },
             'fpm': {
                 'conf': '/etc/php5/fpm/php-fpm.conf',
