--- a/saltstack/salt/openssl/map.jinja
+++ b/saltstack/salt/openssl/map.jinja
@@ -1,10 +1,12 @@
 {% set openssl = salt['pillar.get']('openssl', {
     'lookup': salt['grains.filter_by']({
         'Debian': {
-            'package': 'openssl'
+            'package': 'openssl',
+            'python_openssl': 'python-openssl'
         },
         'RedHat': {
-            'package': 'openssl'
+            'package': 'openssl',
+            'python_openssl': 'pyOpenSSL'
         },
     }, default='RedHat' )
 }, merge=True) %}
