--- a/saltstack/salt/gitlab/map.jinja
+++ b/saltstack/salt/gitlab/map.jinja
@@ -2,11 +2,13 @@
     'lookup': salt['grains.filter_by']({
         'Debian': {
             'package': 'https://downloads-packages.s3.amazonaws.com/debian-7.7/gitlab_7.6.2-omnibus.5.3.0.ci.1-1_amd64.deb',
-            'name': 'gitlab_7.6.2-omnibus.5.3.0.ci.1-1_amd64.deb'
+            'name': 'gitlab_7.6.2-omnibus.5.3.0.ci.1-1_amd64.deb',
+            'conf_dir': '/etc/gitlab'
         },
         'RedHat': {
             'package': 'https://downloads-packages.s3.amazonaws.com/centos-6.6/gitlab-7.6.2_omnibus.5.3.0.ci.1-1.el6.x86_64.rpm',
-            'name': 'gitlab-7.6.2_omnibus.5.3.0.ci.1-1.el6.x86_64.rpm'
+            'name': 'gitlab-7.6.2_omnibus.5.3.0.ci.1-1.el6.x86_64.rpm',
+            'conf_dir': '/etc/gitlab'
         },
     }, default='RedHat' )
 }, merge=True) %}
